<resources>
    <string name="app_name">Complete The Equation</string>
    <string name="button_easy">Easy</string>
    <string name="button_medium">Medium</string>
    <string name="button_hard">Hard</string>
    <string name="copyright">Copyright © Herry Elbert 01082180021 Jovan 01082180015</string>
    <string name="image_splashscreen">Splash Screen</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="divide">/</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="submit">Submit</string>
    <string name="score">Score:</string>
    <string name="easy">Easy</string>
    <string name="high_score">High Score:</string>
    <string name="start">START</string>
</resources>